syntax = "proto3";
package airtrack;
option go_package = "github.com/afk11/airtrack/pkg/pb";

message Source {
  string Id = 1;
  string Type = 2;
  string Url = 3;
};
message Message {
  Source Source = 1;
  // 6 character hex identifier for aircraft
  string Icao = 10;
  string Squawk = 11;
  string CallSign = 12;
  string AltitudeGeometric = 13;
  string AltitudeBarometric = 14;

  string Latitude = 20;
  string Longitude = 21;

  bool IsOnGround = 30;

  string VerticalRate = 40;

  string Track = 50;
  string GroundSpeed = 90;
}
message State {
  // 6 character hex identifier for aircraft
  string Icao = 1;

  // barometric altitude in feet
  bool HaveAltitudeBarometric = 10;
  int64 AltitudeBarometric = 11;

  // geometric altitude in feet
  bool HaveAltitudeGeometric = 12;
  int64 AltitudeGeometric = 13;

  bool HaveLocation = 20;
  // Latitude
  double Latitude = 21;
  // Longitude
  double Longitude = 22;

  bool HaveCallsign = 30;
  // Callsign or flight identifier
  string CallSign = 31;

  bool HaveSquawk = 40;
  // 4 digit octal number (as string)
  string Squawk = 41;

  bool HaveCountry = 50;
  // Aircraft registration country determined by ICAO Country Allocation
  // CountryCode is ISO3166 2 letter code
  string CountryCode = 51;
  // Country is the long country name
  string Country = 52;

  // IsOnGround tracks whether the aircraft is on ground or in the air.
  bool IsOnGround = 60;

  bool HaveVerticalRate = 70;
  // VerticalRate is the change in vertical rate (+/-) in feet per minute
  int64 VerticalRate = 71;

  bool HaveTrack = 80;
  double Track = 81;

  bool HaveGroundSpeed = 90;
  double GroundSpeed = 91;
}